--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,8 +1,25 @@
 
-.navbar-light .navbar-nav > .nav-item > .nav-link, .navbar-light .navbar-nav > .nav-item > .nav-link:focus, .navbar-light .navbar-nav > .nav-item > .nav-link:hover {
-	white-space: nowrap;
-	-webkit-transition: .2s ease;
-	transition: .2s ease;
-	color: rgba(255,255,255,.6);
-	font-weight: 300;
+.navbar {
+  min-height: 80px;
+}
+
+.navbar-brand {
+  padding: 0 15px;
+  height: 80px;
+  line-height: 80px;
+}
+
+.navbar-toggle {
+  /* (80px - button height 34px) / 2 = 23px */
+  margin-top: 23px;
+  padding: 9px 10px !important;
+}
+
+@media (min-width: 768px) {
+  .navbar-nav > li > a {
+    /* (80px - line-height of 27px) / 2 = 26.5px */
+    padding-top: 26.5px;
+    padding-bottom: 26.5px;
+    line-height: 27px;
+  }
 }
